@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-30T08:25:06Z",
-  "count_outdated" : 2187,
-  "uniques_outdated" : 452,
-  "count" : 2227,
+  "timestamp" : "2022-06-30T16:29:19Z",
+  "count_outdated" : 2189,
+  "uniques_outdated" : 453,
+  "count" : 2229,
   "uniques" : 477,
   "clones" : [
-    {
-      "timestamp": "2022-06-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
