@@ -1,3 +1,10 @@
+2022-06-30T16:29:19Z:
+* notice: last 14d: unq all: 11 40
+* notice: prev accum: outdated-unq outdated-all / unq all: 452 2187 / 477 2227
+* notice: next accum: outdated-unq outdated-all / unq all: 453 2189 / 477 2229
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-16] / [2022-06-30]
+
 2022-06-30T08:25:06Z:
 * notice: last 14d: unq all: 11 40
 * notice: prev accum: outdated-unq outdated-all / unq all: 452 2187 / 476 2227
